--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/uvxicon.svg" />
+    <link rel="preload" as="audio" href="https://cdn.glitch.global/22bbb2b4-7775-42b2-9c78-4b39e4d505e9/officeBgMusic.mp3?v=1714682590547">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Standing ROM</title>
   </head>
