--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/uvxicon.svg" />
+    <link rel="preload" fetchpriority="high" as="image" href="/indoorEnvCard.webp" type="image/webp">
+    <link rel="preload" fetchpriority="high" as="image" href="/outdoorEnvCard.webp" type="image/webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Standing ROM</title>
   </head>
